# ssh-agent-switcher

./: .gitignore  BUILD.bazel  COPYING  Cargo.toml  MODULE.bazel  Makefile  NEWS.md  README.md  WORKSPACE.bazel  flake.nix  go.mod  inttest.sh  main.go  process.go  ssh-agent-switcher.1  ssh-agent-switcher.nix
.github/workflows/: buildifier.sh  distcheck.sh  install-shtk.sh  lint.yml  test.yml
src/: find.rs  lib.rs  main.rs  proxy.rs
tests/: integration.rs  inttest.rs  systemd.rs
