[package]
name = "ssh-agent-switcher"
version = "1.0.0"
edition = "2024"

[dependencies]
daemonize = "0.5"
libc = "0.2"
log = "0.4"
xdg = "3.0"

[dependencies.getoptsargs]
version = "0.1"
features = ["env_logger"]

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "net", "rt-multi-thread", "signal"]
