[package]
name = "ssh-agent-switcher"
version = "1.0.1"
license = "BSD-3-Clause"
authors = ["Julio Merino <julio@meroh.net>"]
categories = ["command-line-utilities"]
keywords = ["screen", "ssh", "ssh-agent", "tmux"]
description = "SSH agent forwarding and tmux done right"
homepage = "https://github.com/jmmv/ssh-agent-switcher/"
repository = "https://github.com/jmmv/ssh-agent-switcher.git"
readme = "README.md"
edition = "2024"

[dependencies]
daemonize = "0.5"
libc = "0.2"
listenfd = "1"
log = "0.4"
signal-hook = "0.3"
xdg = "3.0"

[dependencies.getoptsargs]
version = "0.1"
features = ["env_logger"]

[dev-dependencies]
tempfile = "3"
